{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 231,
  "lineage": "48b14290-5de4-bc09-9e98-68b7516ee207",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip_elastico_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f35cfaa30952c252",
            "domain": "vpc",
            "id": "eipalloc-0f35cfaa30952c252",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-175-211-67.compute-1.amazonaws.com",
            "public_ip": "54.175.211.67",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw_desafiofinal",
            "aws_vpc.vpc_prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "maquina",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:914615239549:instance/i-072e3fcc58783cfb0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-072e3fcc58783cfb0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "curso-terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00cb6f7f0dcf3ac26",
            "private_dns": "ip-10-0-1-254.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.254",
            "public_dns": "ec2-54-174-35-77.compute-1.amazonaws.com",
            "public_ip": "54.174.35.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-034cd443bdf83fd52",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f9d48b08db26d9ec",
            "tags": {
              "Name": "Maquinas Wordpress"
            },
            "tags_all": {
              "Name": "Maquinas Wordpress"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ec2452875e7ae047"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.public_subnet_a",
            "aws_vpc.vpc_prd"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:914615239549:instance/i-0feb2b75ef23f18f6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0feb2b75ef23f18f6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "curso-terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e2b348cff880564a",
            "private_dns": "ip-10-0-1-75.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.75",
            "public_dns": "ec2-52-203-164-60.compute-1.amazonaws.com",
            "public_ip": "52.203.164.60",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0db73af4051fa296b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f9d48b08db26d9ec",
            "tags": {
              "Name": "Maquinas Wordpress"
            },
            "tags_all": {
              "Name": "Maquinas Wordpress"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ec2452875e7ae047"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.public_subnet_a",
            "aws_vpc.vpc_prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_desafiofinal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:914615239549:internet-gateway/igw-0b830c49210004b21",
            "id": "igw-0b830c49210004b21",
            "owner_id": "914615239549",
            "tags": {
              "Name": "igw_desafiofinal"
            },
            "tags_all": {
              "Name": "igw_desafiofinal"
            },
            "vpc_id": "vpc-0b56aa91f7f611fee"
          },
          "dependencies": [
            "aws_vpc.vpc_prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_desafio_final",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f35cfaa30952c252",
            "association_id": "eipassoc-0db023eb5359a4514",
            "connectivity_type": "public",
            "id": "nat-0b7a780f851b28194",
            "network_interface_id": "eni-02d99c29071ed8dab",
            "private_ip": "10.0.1.186",
            "public_ip": "54.175.211.67",
            "subnet_id": "subnet-0f9d48b08db26d9ec"
          },
          "dependencies": [
            "aws_eip.ip_elastico_nat",
            "aws_internet_gateway.igw_desafiofinal",
            "aws_subnet.public_subnet_a",
            "aws_vpc.vpc_prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_desafiofinal_privada",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:914615239549:route-table/rtb-0043660490a23d64e",
            "id": "rtb-0043660490a23d64e",
            "owner_id": "914615239549",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b7a780f851b28194",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b56aa91f7f611fee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ip_elastico_nat",
            "aws_internet_gateway.igw_desafiofinal",
            "aws_nat_gateway.nat_gateway_desafio_final",
            "aws_subnet.public_subnet_a",
            "aws_vpc.vpc_prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_desafiofinal_publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:914615239549:route-table/rtb-0f49714db359d3ff5",
            "id": "rtb-0f49714db359d3ff5",
            "owner_id": "914615239549",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b830c49210004b21",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b56aa91f7f611fee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_desafiofinal",
            "aws_vpc.vpc_prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb_priv_association_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01cbd0ff962d061b6",
            "route_table_id": "rtb-0043660490a23d64e",
            "subnet_id": "subnet-0a2160273ffbf6e2d"
          },
          "dependencies": [
            "aws_eip.ip_elastico_nat",
            "aws_internet_gateway.igw_desafiofinal",
            "aws_nat_gateway.nat_gateway_desafio_final",
            "aws_route_table.rtb_desafiofinal_privada",
            "aws_subnet.private_subnet_a",
            "aws_subnet.public_subnet_a",
            "aws_vpc.vpc_prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb_priv_association_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c867be1706e1548",
            "route_table_id": "rtb-0043660490a23d64e",
            "subnet_id": "subnet-0b809f971eb24edf6"
          },
          "dependencies": [
            "aws_eip.ip_elastico_nat",
            "aws_internet_gateway.igw_desafiofinal",
            "aws_nat_gateway.nat_gateway_desafio_final",
            "aws_route_table.rtb_desafiofinal_privada",
            "aws_subnet.private_subnet_b",
            "aws_subnet.public_subnet_a",
            "aws_vpc.vpc_prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb_pub_association_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053fb1dd5426f8f4b",
            "route_table_id": "rtb-0f49714db359d3ff5",
            "subnet_id": "subnet-0f9d48b08db26d9ec"
          },
          "dependencies": [
            "aws_internet_gateway.igw_desafiofinal",
            "aws_route_table.rtb_desafiofinal_publica",
            "aws_subnet.public_subnet_a",
            "aws_vpc.vpc_prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb_pub_association_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a7db8c592e5cc927",
            "route_table_id": "rtb-0f49714db359d3ff5",
            "subnet_id": "subnet-0f7ae36e85ae00485"
          },
          "dependencies": [
            "aws_internet_gateway.igw_desafiofinal",
            "aws_route_table.rtb_desafiofinal_publica",
            "aws_subnet.public_subnet_b",
            "aws_vpc.vpc_prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:914615239549:security-group/sg-0ec2452875e7ae047",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ec2452875e7ae047",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MySQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow",
            "name_prefix": "",
            "owner_id": "914615239549",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_SSH"
            },
            "tags_all": {
              "Name": "allow_SSH"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b56aa91f7f611fee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:914615239549:subnet/subnet-0a2160273ffbf6e2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2160273ffbf6e2d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "914615239549",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet_privada_a"
            },
            "tags_all": {
              "Name": "Subnet_privada_a"
            },
            "vpc_id": "vpc-0b56aa91f7f611fee"
          },
          "dependencies": [
            "aws_vpc.vpc_prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:914615239549:subnet/subnet-0b809f971eb24edf6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b809f971eb24edf6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "914615239549",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet_privada_b"
            },
            "tags_all": {
              "Name": "Subnet_privada_b"
            },
            "vpc_id": "vpc-0b56aa91f7f611fee"
          },
          "dependencies": [
            "aws_vpc.vpc_prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:914615239549:subnet/subnet-0f9d48b08db26d9ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9d48b08db26d9ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "914615239549",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet_publica_a"
            },
            "tags_all": {
              "Name": "Subnet_publica_a"
            },
            "vpc_id": "vpc-0b56aa91f7f611fee"
          },
          "dependencies": [
            "aws_vpc.vpc_prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:914615239549:subnet/subnet-0f7ae36e85ae00485",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7ae36e85ae00485",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "914615239549",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet_publica_b"
            },
            "tags_all": {
              "Name": "Subnet_publica_b"
            },
            "vpc_id": "vpc-0b56aa91f7f611fee"
          },
          "dependencies": [
            "aws_vpc.vpc_prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_prd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:914615239549:vpc/vpc-0b56aa91f7f611fee",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b15d543cbed50ec1",
            "default_route_table_id": "rtb-0bdaacb18dcde947d",
            "default_security_group_id": "sg-06344f05c2145896a",
            "dhcp_options_id": "dopt-04146bc1e4d30a32f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b56aa91f7f611fee",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bdaacb18dcde947d",
            "owner_id": "914615239549",
            "tags": {
              "Name": "Minha_VPC"
            },
            "tags_all": {
              "Name": "Minha_VPC"
            }
          }
        }
      ]
    }
  ]
}